--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main page</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,55 +27,55 @@
             ><span class="logo_part1">Web</span>Studio</a
           >
           <nav>
-            <ul>
+            <ul class="menu">
               <li><a class="link" href="./index.html">Agencja</a></li>
               <li><a class="link" href="./portfolio.html">Portfolio</a></li>
               <li><a class="link" href="./kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
-          <div class="contact">
-            <ul>
+          <div>
+            <ul class="contact">
               <li>
-                <a class="link" href="mailto:info@devstudio.com"
+                <a class="link-top" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="link" href="tel:+48111111111">+48 111 111 111</a>
+                <a class="link-top" href="tel:+48111111111">+48 111 111 111</a>
               </li>
             </ul>
           </div>
         </div>
       </header>
       <main>
-        <section class="title">
+        <div class="title">
           <h1 class="main-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button class="order" type="button">Zamów usługę</button>
-        </section>
+        </div>
         <article>
-          <ul>
-            <li>
+          <ul class="text-box">
+            <li class="description">
               <h3 class="article-title">LOREM IPSUM</h3>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="description">
               <h3 class="article-title">LOREM IPSUM</h3>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="description">
               <h3 class="article-title">LOREM IPSUM</h3>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="description">
               <h3 class="article-title">LOREM IPSUM</h3>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -82,7 +86,7 @@
         </article>
         <section>
           <h2 class="section-title">Czym się zajmujemy</h2>
-          <ul>
+          <ul class="activites">
             <li>
               <img
                 src="images/box1.jpg"
@@ -111,7 +115,7 @@
         </section>
         <section class="team">
           <h2 class="section-title">Nasz Zespół</h2>
-          <ul>
+          <ul class="team-photos">
             <li>
               <figure>
                 <img
@@ -185,7 +189,7 @@
           >
           <address class="bottom-contacts">
             <p class="text">m. Warszawa, Aleje Jerozolimskie 21</p>
-            <ul>
+            <ul class="bottom-link">
               <li>
                 <a class="link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
