--- a/kontakt.html
+++ b/kontakt.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontakt</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -54,7 +58,7 @@
           >
           <address class="bottom-contacts">
             <p class="text">m. Warszawa, Aleje Jerozolimskie 21</p>
-            <ul>
+            <ul class="bottom-link">
               <li>
                 <a class="link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
