--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,21 +27,21 @@
             ><span class="logo_part1">Web</span>Studio</a
           >
           <nav>
-            <ul>
+            <ul class="menu">
               <li><a class="link" href="./index.html">Agencja</a></li>
               <li><a class="link" href="./portfolio.html">Portfolio</a></li>
               <li><a class="link" href="./kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
-          <div class="contact">
-            <ul>
+          <div>
+            <ul class="contact">
               <li>
-                <a class="link" href="mailto:info@devstudio.com"
+                <a class="link-top" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="link" href="tel:+48111111111">+48 111 111 111</a>
+                <a class="link-top" href="tel:+48111111111">+48 111 111 111</a>
               </li>
             </ul>
           </div>
@@ -45,7 +49,7 @@
       </header>
 
       <nav>
-        <ul>
+        <ul class="button-navigation">
           <li><button type="button">Wszystkie</button></li>
           <li><button type="button">Strony</button></li>
           <li><button type="button">Aplikacje</button></li>
@@ -54,8 +58,8 @@
         </ul>
       </nav>
 
-      <div class="line1">
-        <ul>
+      <div>
+        <ul class="line-top">
           <li>
             <figure>
               <img
@@ -64,11 +68,12 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Technocrack</div>
-                <div class="product">Strona internetowa</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Technocrack</div>
+                  <div class="product">Strona internetowa</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
           <li>
@@ -79,11 +84,12 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Grafika New Orlean vs Golden Star</div>
-                <div class="product">Dizajn</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Grafika New Orlean vs Golden Star</div>
+                  <div class="product">Dizajn</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
           <li>
@@ -94,17 +100,18 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Restauracja Seafood</div>
-                <div class="product">Aplikacja</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Restauracja Seafood</div>
+                  <div class="product">Aplikacja</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
         </ul>
       </div>
-      <div class="line2">
-        <ul>
+      <div>
+        <ul class="line-center">
           <li>
             <figure>
               <img
@@ -113,10 +120,12 @@
                 width="270"
                 height="260"
               />
-              <figcaption>
-                <div class="projects">Projekt Prime</div>
-                <div class="product">Marketing</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Projekt Prime</div>
+                  <div class="product">Marketing</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
           <li>
@@ -127,11 +136,12 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Projekt Boxes</div>
-                <div class="product">Aplikacja</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Projekt Boxes</div>
+                  <div class="product">Aplikacja</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
           <li>
@@ -142,17 +152,18 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Inspiration has no Borders</div>
-                <div class="product">Strona internetowaa</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Inspiration has no Borders</div>
+                  <div class="product">Strona internetowaa</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
         </ul>
       </div>
-      <div class="line3">
-        <ul>
+      <div>
+        <ul class="line-bottom">
           <li>
             <figure>
               <img
@@ -161,11 +172,12 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Magazyn Limited Edition</div>
-                <div class="product">Dizajn</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Magazyn Limited Edition</div>
+                  <div class="product">Dizajn</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
           <li>
@@ -176,11 +188,12 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Projekt LAB</div>
-                <div class="product">Marketing</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Projekt LAB</div>
+                  <div class="product">Marketing</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
           <li>
@@ -191,11 +204,12 @@
                 width="270"
                 height="260"
               />
-
-              <figcaption>
-                <div class="projects">Growing Business</div>
-                <div class="product">Aplikacja</div>
-              </figcaption>
+              <div class="product-description">
+                <figcaption>
+                  <div class="projects">Growing Business</div>
+                  <div class="product">Aplikacja</div>
+                </figcaption>
+              </div>
             </figure>
           </li>
         </ul>
@@ -210,7 +224,7 @@
           >
           <address class="bottom-contacts">
             <p class="text">m. Warszawa, Aleje Jerozolimskie 21</p>
-            <ul>
+            <ul class="bottom-link">
               <li>
                 <a class="link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
