--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 
       <div>
         <ul class="line-top">
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/laptop.jpg"
@@ -68,15 +68,14 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Technocrack</div>
-                  <div class="product">Strona internetowa</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Technocrack</div>
+                <div class="product">Strona internetowa</div>
+              </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/basketball_players.jpg"
@@ -84,15 +83,14 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Grafika New Orlean vs Golden Star</div>
-                  <div class="product">Dizajn</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Grafika New Orlean vs Golden Star</div>
+                <div class="product">Dizajn</div>
+              </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/logo_seafood_restaurant.jpg"
@@ -100,19 +98,18 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Restauracja Seafood</div>
-                  <div class="product">Aplikacja</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Restauracja Seafood</div>
+                <div class="product">Aplikacja</div>
+              </figcaption>
             </figure>
           </li>
         </ul>
       </div>
       <div>
         <ul class="line-center">
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/headphones.jpg"
@@ -120,15 +117,14 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Projekt Prime</div>
-                  <div class="product">Marketing</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Projekt Prime</div>
+                <div class="product">Marketing</div>
+              </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/boxes.jpg"
@@ -136,15 +132,14 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Projekt Boxes</div>
-                  <div class="product">Aplikacja</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Projekt Boxes</div>
+                <div class="product">Aplikacja</div>
+              </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/monitor.jpg"
@@ -152,19 +147,18 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Inspiration has no Borders</div>
-                  <div class="product">Strona internetowaa</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Inspiration has no Borders</div>
+                <div class="product">Strona internetowaa</div>
+              </figcaption>
             </figure>
           </li>
         </ul>
       </div>
       <div>
         <ul class="line-bottom">
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/magazine_limited_edition.jpg"
@@ -172,15 +166,14 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Magazyn Limited Edition</div>
-                  <div class="product">Dizajn</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Magazyn Limited Edition</div>
+                <div class="product">Dizajn</div>
+              </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/price_tag_lab.jpg"
@@ -188,15 +181,14 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Projekt LAB</div>
-                  <div class="product">Marketing</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Projekt LAB</div>
+                <div class="product">Marketing</div>
+              </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="product-description">
             <figure>
               <img
                 src="images/hands_typing_on_a_laptop.jpg"
@@ -204,12 +196,11 @@
                 width="270"
                 height="260"
               />
-              <div class="product-description">
-                <figcaption>
-                  <div class="projects">Growing Business</div>
-                  <div class="product">Aplikacja</div>
-                </figcaption>
-              </div>
+
+              <figcaption>
+                <div class="projects">Growing Business</div>
+                <div class="product">Aplikacja</div>
+              </figcaption>
             </figure>
           </li>
         </ul>
