--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper container">
       <header>
-        <div class="top">
+        <div class="top container">
           <a
             class="logo logo_part2"
             href="https://ljarocka.github.io/goit-markup-hw-02/"
@@ -48,12 +48,12 @@
         </div>
       </header>
       <main>
-        <div class="title">
+        <div class="title container section">
           <h1 class="main-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button class="order" type="button">Zamów usługę</button>
         </div>
-        <article>
-          <ul class="text-box">
+        <article class="section">
+          <ul class="text-box container">
             <li class="description">
               <h3 class="article-title">LOREM IPSUM</h3>
               <p class="text">
@@ -84,7 +84,7 @@
             </li>
           </ul>
         </article>
-        <section>
+        <section class="container section">
           <h2 class="section-title">Czym się zajmujemy</h2>
           <ul class="activites">
             <li>
@@ -113,7 +113,7 @@
             </li>
           </ul>
         </section>
-        <section class="team">
+        <section class="team container section">
           <h2 class="section-title">Nasz Zespół</h2>
           <ul class="team-photos">
             <li>
@@ -180,7 +180,7 @@
         </section>
       </main>
       <footer>
-        <div class="bottom">
+        <div class="bottom container">
           <a
             class="logo logo_part2"
             href="https://ljarocka.github.io/goit-markup-hw-02/"
