--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
     />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper container">
       <header>
-        <div class="top">
+        <div class="top container">
           <a
             class="logo logo_part2"
             href="https://ljarocka.github.io/goit-markup-hw-02/"
@@ -47,9 +47,8 @@
           </div>
         </div>
       </header>
-
       <nav>
-        <ul class="button-navigation">
+        <ul class="button-navigation container">
           <li><button type="button">Wszystkie</button></li>
           <li><button type="button">Strony</button></li>
           <li><button type="button">Aplikacje</button></li>
@@ -57,156 +56,150 @@
           <li><button type="button">Marketing</button></li>
         </ul>
       </nav>
+      <section class="section">
+        <div>
+          <ul class="line container">
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/laptop.jpg"
+                  alt="laptop"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Technocrack</div>
+                  <div class="product">Strona internetowa</div>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/basketball_players.jpg"
+                  alt="koszykarze"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Grafika New Orlean vs Golden Star</div>
+                  <div class="product">Dizajn</div>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/logo_seafood_restaurant.jpg"
+                  alt="logo restsuracji seafood"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Restauracja Seafood</div>
+                  <div class="product">Aplikacja</div>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="line container">
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/headphones.jpg"
+                  alt="słuchawki"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Projekt Prime</div>
+                  <div class="product">Marketing</div>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/boxes.jpg"
+                  alt="opakowania"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Projekt Boxes</div>
+                  <div class="product">Aplikacja</div>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/monitor.jpg"
+                  alt="monitor"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Inspiration has no Borders</div>
+                  <div class="product">Strona internetowaa</div>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="line container">
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/magazine_limited_edition.jpg"
+                  alt="magazyn"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <div class="projects">Magazyn Limited Edition</div>
+                  <div class="product">Dizajn</div>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/price_tag_lab.jpg"
+                  alt="metka"
+                  width="270"
+                  height="260"
+                />
 
-      <div>
-        <ul class="line-top">
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/laptop.jpg"
-                alt="laptop"
-                width="270"
-                height="260"
-              />
+                <figcaption>
+                  <div class="projects">Projekt LAB</div>
+                  <div class="product">Marketing</div>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="product-description">
+              <figure>
+                <img
+                  src="images/hands_typing_on_a_laptop.jpg"
+                  alt="pęce piszące na klawiaturze"
+                  width="270"
+                  height="260"
+                />
 
-              <figcaption>
-                <div class="projects">Technocrack</div>
-                <div class="product">Strona internetowa</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/basketball_players.jpg"
-                alt="koszykarze"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Grafika New Orlean vs Golden Star</div>
-                <div class="product">Dizajn</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/logo_seafood_restaurant.jpg"
-                alt="logo restsuracji seafood"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Restauracja Seafood</div>
-                <div class="product">Aplikacja</div>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <ul class="line-center">
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/headphones.jpg"
-                alt="słuchawki"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Projekt Prime</div>
-                <div class="product">Marketing</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/boxes.jpg"
-                alt="opakowania"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Projekt Boxes</div>
-                <div class="product">Aplikacja</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/monitor.jpg"
-                alt="monitor"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Inspiration has no Borders</div>
-                <div class="product">Strona internetowaa</div>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <ul class="line-bottom">
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/magazine_limited_edition.jpg"
-                alt="magazyn"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Magazyn Limited Edition</div>
-                <div class="product">Dizajn</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/price_tag_lab.jpg"
-                alt="metka"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Projekt LAB</div>
-                <div class="product">Marketing</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="product-description">
-            <figure>
-              <img
-                src="images/hands_typing_on_a_laptop.jpg"
-                alt="pęce piszące na klawiaturze"
-                width="270"
-                height="260"
-              />
-
-              <figcaption>
-                <div class="projects">Growing Business</div>
-                <div class="product">Aplikacja</div>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </div>
+                <figcaption>
+                  <div class="projects">Growing Business</div>
+                  <div class="product">Aplikacja</div>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
       <footer>
-        <div class="bottom">
+        <div class="bottom container">
           <a
             class="logo logo_part2"
             href="https://ljarocka.github.io/goit-markup-hw-02/"
