--- a/kontakt.html
+++ b/kontakt.html
@@ -18,30 +18,30 @@
     />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper container">
       <header>
-        <div class="top">
+        <div class="top container">
           <a
             class="logo logo_part2"
             href="https://ljarocka.github.io/goit-markup-hw-02/"
             ><span class="logo_part1">Web</span>Studio</a
           >
           <nav>
-            <ul>
+            <ul class="menu">
               <li><a class="link" href="./index.html">Agencja</a></li>
               <li><a class="link" href="./portfolio.html">Portfolio</a></li>
               <li><a class="link" href="./kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
-          <div class="contact">
-            <ul>
+          <div>
+            <ul class="contact">
               <li>
-                <a class="link" href="mailto:info@devstudio.com"
+                <a class="link-top" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="link" href="tel:+48111111111">+48 111 111 111</a>
+                <a class="link-top" href="tel:+48111111111">+48 111 111 111</a>
               </li>
             </ul>
           </div>
@@ -49,7 +49,7 @@
       </header>
 
       <footer>
-        <div class="bottom">
+        <div class="bottom container">
           <a
             class="logo logo_part2"
             href="https://ljarocka.github.io/goit-markup-hw-02/"
